🚀 Backend Refactoring and Deployment Preparation
✅ Major Changes:
- Cleaned up old files and removed duplicates
- Added comprehensive .gitignore for Java/Spring Boot
- Created production-ready deployment scripts
- Added comprehensive API testing framework

🆕 New Files:
- application-production.yml: Production configuration
- deploy-to-vps.sh: Automated VPS deployment script
- setup-database-vps.sh: MySQL database setup script
- test-all-apis.sh: Comprehensive API testing script
- DEPLOYMENT_GUIDE.md: Complete deployment documentation
- DEPLOYMENT_READY.md: Deployment readiness summary

🔧 Backend Improvements:
- Enhanced security configuration
- Improved JWT authentication
- Added rate limiting configuration
- Better error handling and logging
- Production-ready database configuration

🧪 Testing:
- Comprehensive API testing for all modules
- Security testing included
- Health check endpoints
- Automated deployment validation

📦 Ready for Production:
- Clean codebase with proper structure
- Automated deployment scripts
- Comprehensive documentation
- Full API testing coverage